syntax = "proto3";

package peerInterface;

// need to import the peerInfo classes from Agent.proto
import "Agent.proto";

//////////////////
// Peer Service //
//////////////////
service Peer {
  // general p2p stuff
  rpc PingPeer (PingPeerMessage) returns (PingPeerMessage) {};

  // git
  rpc GetGitInfo (InfoRequest) returns (InfoReply) {};
  rpc GetGitPack (PackRequest) returns (PackReply) {};
  rpc GetVaultNames (agentInterface.EmptyMessage) returns (VaultNamesReply) {};

  // NAT traversal
  // the only two NAT traversal methods that are exposed via gRPC are GetUDPAddress and
  // RequestPublicRelay. The other two (RequestDirectHolePunch and RequestHolePunch)
  // will only be available via the UDP channels
  rpc GetUDPAddress (agentInterface.EmptyMessage) returns (agentInterface.StringMessage) {};
  rpc RequestPublicRelay (PublicRelayRequest) returns (PublicRelayReply) {};

  // CA functionality
  rpc GetRootCertificate (agentInterface.EmptyMessage) returns (agentInterface.StringMessage) {};
  rpc RequestCertificateSigning (agentInterface.StringMessage) returns (agentInterface.StringMessage) {};

  // DHT Functionality
  rpc PeerDHTFindNode (PeerDHTFindNodeRequest) returns (PeerDHTFindNodeReply) {};

  // This method is for public relay nodes only and by default
  // it rejects all calls to it in order to protect private nodes
  // from adding random peers
  rpc AddPeerInfo (agentInterface.PeerInfoReadOnlyMessage) returns (agentInterface.EmptyMessage) {};
}

///////////////
// Ping Peer //
///////////////
message PingPeerMessage {
  string challenge = 1;
}

/////////
// Git //
/////////
// ==== Vault Info ==== //
message InfoRequest {
  string vault_name = 1;
}
message InfoReply {
  string vault_name = 1;
  bytes body = 2;
}

// ==== PackRequest ==== //
message PackRequest {
  string vault_name = 1;
  bytes body = 2;
}
message PackReply {
  string vault_name = 1;
  bytes body = 2;
}

// ==== VaultNamesRequest ==== //
message VaultNamesReply {
  repeated string vault_name_list = 1;
}

///////////////////
// NAT Traversal //
///////////////////
// ==== UDPAddress ==== //
message UDPAddressResponse {
  string address = 1;
}
// ==== PublicRelay ==== //
message PublicRelayRequest {
  string target_peer_id = 1;
  string origin_peer_id = 2;
}
message PublicRelayReply {
  string relay_address = 3;
}

// ==== UDP specific messages ==== //
enum NatUdpMessageType {
  DIRECT_CONNECTION = 0;
  HOLE_PUNCH_CONNECTION = 1;
  PUBLIC_RELAY_REQUEST = 2;
}
message NatUdpMessage {
  NatUdpMessageType type = 1;
  bool is_response = 2;
  bytes sub_message = 3;
}

///////////////////////
// Direct Connection //
///////////////////////
message DirectConnectionMessage {
  string peer_id = 1;
}
///////////////////////////
// Hole Punch Connection //
///////////////////////////
message HolePunchConnectionMessage {
  string target_peer_id = 1;
  string origin_peer_id = 2;
  bool is_response = 3;
  string udp_address = 4;
}

///////////////////////
// DHT Functionality //
///////////////////////
message PeerDHTFindNodeRequest {
  string target_peer_id = 1;
}
message PeerDHTFindNodeReply {
  repeated agentInterface.PeerInfoReadOnlyMessage closest_peers = 2;
}

//////////////////////////////
// Micro Transport Protocol //
//////////////////////////////
// this is only used via UDP and does not have any corresponding rpc method
message MTPPacket {
  int64 id = 1;
  string peerId = 2;
  int64 connection = 3;
  int64 timestamp = 4;
  int64 timediff = 5;
  int64 window = 6;
  int64 seq = 7;
  int64 ack = 8;
  bytes data = 9;
  int64 sent = 10;
}

